--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -101,39 +101,73 @@
     "    chicken_inflow = stock_inflow_df[stock_inflow_df['product_type'] == 'chicken'].groupby('month').agg({\n",
     "        'quantity': 'sum',\n",
     "        'weight': 'sum'\n",
-    "    })\n",
-    "    \n",
-    "    summary_df['total_chicken_inflow_quantity'] = summary_df['month'].map(\n",
-    "        chicken_inflow['quantity']).fillna(0)\n",
-    "    summary_df['total_chicken_inflow_weight'] = summary_df['month'].map(\n",
-    "        chicken_inflow['weight']).fillna(0)\n",
+    "    }).reset_index()\n",
     "    \n",
     "    # Calculate chicken release summaries\n",
     "    chicken_release = release_df[release_df['product'] == 'chicken'].groupby('month').agg({\n",
     "        'quantity': 'sum',\n",
     "        'weight_in_kg': 'sum'\n",
-    "    })\n",
-    "    \n",
-    "    summary_df['total_chicken_release_quantity'] = summary_df['month'].map(\n",
-    "        chicken_release['quantity']).fillna(0)\n",
-    "    summary_df['total_chicken_release_weight'] = summary_df['month'].map(\n",
-    "        chicken_release['weight_in_kg']).fillna(0)\n",
+    "    }).reset_index()\n",
     "    \n",
     "    # Calculate gizzard inflow summaries\n",
     "    gizzard_inflow = stock_inflow_df[stock_inflow_df['product_type'] == 'gizzard'].groupby('month').agg({\n",
     "        'weight': 'sum'\n",
-    "    })\n",
-    "    \n",
-    "    summary_df['total_gizzard_inflow_weight'] = summary_df['month'].map(\n",
-    "        gizzard_inflow['weight']).fillna(0)\n",
+    "    }).reset_index()\n",
     "    \n",
     "    # Calculate gizzard release summaries\n",
     "    gizzard_release = release_df[release_df['product'] == 'gizzard'].groupby('month').agg({\n",
     "        'weight_in_kg': 'sum'\n",
+    "    }).reset_index()\n",
+    "    \n",
+    "    # Merge all data with the summary dataframe\n",
+    "    summary_df = summary_df.merge(chicken_inflow, on='month', how='left')\n",
+    "    summary_df = summary_df.merge(\n",
+    "        chicken_release.rename(columns={\n",
+    "            'quantity': 'total_chicken_release_quantity',\n",
+    "            'weight_in_kg': 'total_chicken_release_weight'\n",
+    "        }), \n",
+    "        on='month', \n",
+    "        how='left'\n",
+    "    )\n",
+    "    \n",
+    "    summary_df = summary_df.merge(\n",
+    "        gizzard_inflow.rename(columns={'weight': 'total_gizzard_inflow_weight'}),\n",
+    "        on='month',\n",
+    "        how='left'\n",
+    "    )\n",
+    "    \n",
+    "    summary_df = summary_df.merge(\n",
+    "        gizzard_release.rename(columns={'weight_in_kg': 'total_gizzard_release_weight'}),\n",
+    "        on='month',\n",
+    "        how='left'\n",
+    "    )\n",
+    "    \n",
+    "    # Rename columns\n",
+    "    summary_df = summary_df.rename(columns={\n",
+    "        'quantity': 'total_chicken_inflow_quantity',\n",
+    "        'weight': 'total_chicken_inflow_weight'\n",
     "    })\n",
     "    \n",
-    "    summary_df['total_gizzard_release_weight'] = summary_df['month'].map(\n",
-    "        gizzard_release['weight_in_kg']).fillna(0)\n",
+    "    # Fill NaN values with 0\n",
+    "    numeric_columns = summary_df.select_dtypes(include=['float64', 'int64']).columns\n",
+    "    summary_df[numeric_columns] = summary_df[numeric_columns].fillna(0)\n",
+    "    \n",
+    "    # Round numeric columns to 2 decimal places\n",
+    "    summary_df[numeric_columns] = summary_df[numeric_columns].round(2)\n",
+    "    \n",
+    "    # Reorder columns to match desired output\n",
+    "    column_order = [\n",
+    "        'month',\n",
+    "        'year_month',\n",
+    "        'total_chicken_inflow_quantity',\n",
+    "        'total_chicken_inflow_weight',\n",
+    "        'total_chicken_release_quantity',\n",
+    "        'total_chicken_release_weight',\n",
+    "        'total_gizzard_inflow_weight',\n",
+    "        'total_gizzard_release_weight'\n",
+    "    ]\n",
+    "    \n",
+    "    summary_df = summary_df[column_order]\n",
     "    \n",
     "    return summary_df\n",
     "\n",
@@ -156,7 +190,6 @@
     "    \n",
     "    return stock_inflow_main_df, opening_stock_df, release_df, summary_df\n",
     "\n",
-    "          \n",
     "def upload_df_to_gsheet(df, spreadsheet_id, sheet_name, credentials_file):\n",
     "    try:\n",
     "        df_copy = df.copy()\n",
@@ -166,16 +199,10 @@
     "        for col in datetime_columns:\n",
     "            df_copy[col] = df_copy[col].dt.strftime('%Y-%m-%d')\n",
     "        \n",
-    "        # Format numeric columns\n",
+    "        # Ensure numeric columns are formatted properly\n",
     "        numeric_columns = df_copy.select_dtypes(include=['float64', 'int64']).columns\n",
     "        for col in numeric_columns:\n",
-    "            # Round to 2 decimal places and convert to string to prevent scientific notation\n",
-    "            df_copy[col] = df_copy[col].round(2).apply(lambda x: '{:.2f}'.format(x) if pd.notnull(x) else '')\n",
-    "            \n",
-    "        # Convert remaining object columns to string\n",
-    "        for col in df_copy.columns:\n",
-    "            if df_copy[col].dtype == 'object':\n",
-    "                df_copy[col] = df_copy[col].astype(str)\n",
+    "            df_copy[col] = pd.to_numeric(df_copy[col], errors='coerce').fillna(0)\n",
     "        \n",
     "        SCOPES = ['https://www.googleapis.com/auth/spreadsheets']\n",
     "        credentials = service_account.Credentials.from_service_account_file(\n",
@@ -203,29 +230,25 @@
     "        result = service.spreadsheets().values().update(\n",
     "            spreadsheetId=spreadsheet_id,\n",
     "            range=f'{sheet_name}!A1',\n",
-    "            valueInputOption='RAW',\n",
+    "            valueInputOption='USER_ENTERED',\n",
     "            body=body\n",
     "        ).execute()\n",
     "        \n",
-    "        # Format number columns in Google Sheets\n",
-    "        requests = []\n",
+    "        # Get sheet ID\n",
     "        sheet_metadata = service.spreadsheets().get(spreadsheetId=spreadsheet_id).execute()\n",
     "        sheet_id = None\n",
-    "        \n",
-    "        # Find the sheet ID for the current sheet\n",
     "        for sheet in sheet_metadata.get('sheets', ''):\n",
     "            if sheet.get('properties', {}).get('title') == sheet_name:\n",
     "                sheet_id = sheet.get('properties', {}).get('sheetId')\n",
     "                break\n",
     "        \n",
     "        if sheet_id is not None:\n",
-    "            # Apply number formatting to all numeric columns\n",
-    "            requests.append({\n",
+    "            requests = [{\n",
     "                'repeatCell': {\n",
     "                    'range': {\n",
     "                        'sheetId': sheet_id,\n",
-    "                        'startRowIndex': 1,  # Skip header row\n",
-    "                        'startColumnIndex': 0,\n",
+    "                        'startRowIndex': 1,\n",
+    "                        'startColumnIndex': 2,  # Start from the first numeric column\n",
     "                        'endColumnIndex': len(df_copy.columns)\n",
     "                    },\n",
     "                    'cell': {\n",
@@ -238,13 +261,13 @@
     "                    },\n",
     "                    'fields': 'userEnteredFormat.numberFormat'\n",
     "                }\n",
-    "            })\n",
+    "            }]\n",
     "            \n",
     "            # Apply the formatting\n",
-    "            body = {'requests': requests}\n",
+    "            format_body = {'requests': requests}\n",
     "            service.spreadsheets().batchUpdate(\n",
     "                spreadsheetId=spreadsheet_id,\n",
-    "                body=body\n",
+    "                body=format_body\n",
     "            ).execute()\n",
     "        \n",
     "        print(f\"Updated {result.get('updatedCells')} cells in {sheet_name}\")\n",
@@ -255,7 +278,60 @@
     "        return False\n",
     "    except Exception as e:\n",
     "        print(f\"An unexpected error occurred in {sheet_name}: {str(e)}\")\n",
-    "        return False\n"
+    "        return False\n",
+    "\n",
+    "def main():\n",
+    "    CREDENTIALS_FILE = 'credentials.json' \n",
+    "    \n",
+    "    try:\n",
+    "        spreadsheet = connect_to_sheets(CREDENTIALS_FILE)\n",
+    "        \n",
+    "        stock_inflow_df = read_worksheet_to_df(spreadsheet, 'stock_inflow')\n",
+    "        release_df = read_worksheet_to_df(spreadsheet, 'release')\n",
+    "        \n",
+    "        stock_inflow_main_df, opening_stock_df, release_df, summary_df = process_sheets_data(stock_inflow_df, release_df)\n",
+    "        \n",
+    "        spreadsheet_id = os.getenv('SPREADSHEET_ID')\n",
+    "        \n",
+    "        success_stock = upload_df_to_gsheet(\n",
+    "            stock_inflow_main_df, \n",
+    "            spreadsheet_id, \n",
+    "            'stock_inflow_clean',\n",
+    "            CREDENTIALS_FILE\n",
+    "        )\n",
+    "        \n",
+    "        success_opening_stock = upload_df_to_gsheet(\n",
+    "            opening_stock_df, \n",
+    "            spreadsheet_id, \n",
+    "            'opening_stock',\n",
+    "            CREDENTIALS_FILE\n",
+    "        )\n",
+    "        \n",
+    "        success_release = upload_df_to_gsheet(\n",
+    "            release_df, \n",
+    "            spreadsheet_id, \n",
+    "            'release_clean',\n",
+    "            CREDENTIALS_FILE\n",
+    "        )\n",
+    "        \n",
+    "        success_summary = upload_df_to_gsheet(\n",
+    "            summary_df,\n",
+    "            spreadsheet_id,\n",
+    "            'summary',\n",
+    "            CREDENTIALS_FILE\n",
+    "        )\n",
+    "        \n",
+    "        if success_stock and success_opening_stock and success_release and success_summary:\n",
+    "            print(\"Data processing and upload completed successfully!\")\n",
+    "        else:\n",
+    "            raise Exception(\"Failed to upload one or more datasets\")\n",
+    "            \n",
+    "    except Exception as e:\n",
+    "        print(f\"An error occurred: {str(e)}\")\n",
+    "        raise\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
    ]
   }
  ],
