--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -97,29 +97,34 @@
     "        'year_month': all_year_months\n",
     "    })\n",
     "    \n",
+    "    # Calculate summaries with explicit 0 filling\n",
+    "    def safe_agg(group):\n",
+    "        result = group.agg({\n",
+    "            'quantity': 'sum',\n",
+    "            'weight': 'sum'\n",
+    "        }).fillna(0)\n",
+    "        return result\n",
+    "    \n",
     "    # Calculate chicken inflow summaries\n",
-    "    chicken_inflow = stock_inflow_df[stock_inflow_df['product_type'] == 'chicken'].groupby('month').agg({\n",
-    "        'quantity': 'sum',\n",
-    "        'weight': 'sum'\n",
-    "    }).reset_index()\n",
+    "    chicken_inflow = stock_inflow_df[stock_inflow_df['product_type'] == 'chicken'].groupby('month').apply(safe_agg).reset_index()\n",
     "    \n",
     "    # Calculate chicken release summaries\n",
     "    chicken_release = release_df[release_df['product'] == 'chicken'].groupby('month').agg({\n",
     "        'quantity': 'sum',\n",
     "        'weight_in_kg': 'sum'\n",
-    "    }).reset_index()\n",
+    "    }).reset_index().fillna(0)\n",
     "    \n",
     "    # Calculate gizzard inflow summaries\n",
     "    gizzard_inflow = stock_inflow_df[stock_inflow_df['product_type'] == 'gizzard'].groupby('month').agg({\n",
     "        'weight': 'sum'\n",
-    "    }).reset_index()\n",
+    "    }).reset_index().fillna(0)\n",
     "    \n",
     "    # Calculate gizzard release summaries\n",
     "    gizzard_release = release_df[release_df['product'] == 'gizzard'].groupby('month').agg({\n",
     "        'weight_in_kg': 'sum'\n",
-    "    }).reset_index()\n",
+    "    }).reset_index().fillna(0)\n",
     "    \n",
-    "    # Merge all data with the summary dataframe\n",
+    "    # Merge all data with explicit fill values\n",
     "    summary_df = summary_df.merge(chicken_inflow, on='month', how='left')\n",
     "    summary_df = summary_df.merge(\n",
     "        chicken_release.rename(columns={\n",
@@ -148,14 +153,11 @@
     "        'weight': 'total_chicken_inflow_weight'\n",
     "    })\n",
     "    \n",
-    "    # Fill NaN values with 0\n",
+    "    # Fill NaN values with 0 and round\n",
     "    numeric_columns = summary_df.select_dtypes(include=['float64', 'int64']).columns\n",
-    "    summary_df[numeric_columns] = summary_df[numeric_columns].fillna(0)\n",
+    "    summary_df[numeric_columns] = summary_df[numeric_columns].fillna(0).round(2)\n",
     "    \n",
-    "    # Round numeric columns to 2 decimal places\n",
-    "    summary_df[numeric_columns] = summary_df[numeric_columns].round(2)\n",
-    "    \n",
-    "    # Reorder columns to match desired output\n",
+    "    # Reorder columns\n",
     "    column_order = [\n",
     "        'month',\n",
     "        'year_month',\n",
@@ -170,6 +172,7 @@
     "    summary_df = summary_df[column_order]\n",
     "    \n",
     "    return summary_df\n",
+    "\n",
     "\n",
     "def process_sheets_data(stock_inflow_df, release_df):\n",
     "    stock_inflow_df = standardize_dataframe(stock_inflow_df)\n",
@@ -190,6 +193,7 @@
     "    \n",
     "    return stock_inflow_main_df, opening_stock_df, release_df, summary_df\n",
     "\n",
+    "\n",
     "def upload_df_to_gsheet(df, spreadsheet_id, sheet_name, credentials_file):\n",
     "    try:\n",
     "        df_copy = df.copy()\n",
@@ -199,10 +203,34 @@
     "        for col in datetime_columns:\n",
     "            df_copy[col] = df_copy[col].dt.strftime('%Y-%m-%d')\n",
     "        \n",
-    "        # Ensure numeric columns are formatted properly\n",
+    "        # Convert all numeric columns to float first, then round and format\n",
     "        numeric_columns = df_copy.select_dtypes(include=['float64', 'int64']).columns\n",
     "        for col in numeric_columns:\n",
-    "            df_copy[col] = pd.to_numeric(df_copy[col], errors='coerce').fillna(0)\n",
+    "            df_copy[col] = pd.to_numeric(df_copy[col], errors='coerce')\n",
+    "            df_copy[col] = df_copy[col].fillna(0)  # Replace NaN with 0\n",
+    "            df_copy[col] = df_copy[col].round(2)   # Round to 2 decimal places\n",
+    "        \n",
+    "        # Convert DataFrame to list of lists for Google Sheets\n",
+    "        values = [df_copy.columns.values.tolist()]\n",
+    "        \n",
+    "        # Convert numeric values to strings with proper formatting\n",
+    "        row_values = []\n",
+    "        for _, row in df_copy.iterrows():\n",
+    "            formatted_row = []\n",
+    "            for col in df_copy.columns:\n",
+    "                value = row[col]\n",
+    "                if col in numeric_columns:\n",
+    "                    formatted_row.append(str(float(value)))  # Ensure numeric values are properly formatted strings\n",
+    "                else:\n",
+    "                    formatted_row.append(str(value))  # Convert non-numeric values to strings\n",
+    "            row_values.append(formatted_row)\n",
+    "        \n",
+    "        values.extend(row_values)\n",
+    "        \n",
+    "        # Prepare the request body\n",
+    "        body = {\n",
+    "            'values': values\n",
+    "        }\n",
     "        \n",
     "        SCOPES = ['https://www.googleapis.com/auth/spreadsheets']\n",
     "        credentials = service_account.Credentials.from_service_account_file(\n",
@@ -211,13 +239,6 @@
     "        )\n",
     "        \n",
     "        service = build('sheets', 'v4', credentials=credentials)\n",
-    "        \n",
-    "        values = [df_copy.columns.values.tolist()]\n",
-    "        values.extend(df_copy.values.tolist())\n",
-    "        \n",
-    "        body = {\n",
-    "            'values': values\n",
-    "        }\n",
     "        \n",
     "        # Clear existing content\n",
     "        clear_request = service.spreadsheets().values().clear(\n",
@@ -234,7 +255,7 @@
     "            body=body\n",
     "        ).execute()\n",
     "        \n",
-    "        # Get sheet ID\n",
+    "        # Get sheet ID for formatting\n",
     "        sheet_metadata = service.spreadsheets().get(spreadsheetId=spreadsheet_id).execute()\n",
     "        sheet_id = None\n",
     "        for sheet in sheet_metadata.get('sheets', ''):\n",
@@ -248,7 +269,7 @@
     "                    'range': {\n",
     "                        'sheetId': sheet_id,\n",
     "                        'startRowIndex': 1,\n",
-    "                        'startColumnIndex': 2,  # Start from the first numeric column\n",
+    "                        'startColumnIndex': 2,  # Start from first numeric column\n",
     "                        'endColumnIndex': len(df_copy.columns)\n",
     "                    },\n",
     "                    'cell': {\n",
@@ -263,7 +284,6 @@
     "                }\n",
     "            }]\n",
     "            \n",
-    "            # Apply the formatting\n",
     "            format_body = {'requests': requests}\n",
     "            service.spreadsheets().batchUpdate(\n",
     "                spreadsheetId=spreadsheet_id,\n",
@@ -279,6 +299,9 @@
     "    except Exception as e:\n",
     "        print(f\"An unexpected error occurred in {sheet_name}: {str(e)}\")\n",
     "        return False\n",
+    "        \n",
+    "\n",
+    "\n",
     "\n",
     "def main():\n",
     "    CREDENTIALS_FILE = 'credentials.json' \n",
