--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -191,7 +191,7 @@
     "        raise DataProcessingError(f\"Failed to create summary: {str(e)}\")\n",
     "\n",
     "def prepare_df_for_upload(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    \"\"\"Prepare DataFrame for upload by converting dates to strings\"\"\"\n",
+    "    \"\"\"Prepare DataFrame for upload by converting all data types to proper format\"\"\"\n",
     "    df_copy = df.copy()\n",
     "    \n",
     "    # Convert datetime columns to string format\n",
@@ -199,12 +199,22 @@
     "    for col in date_columns:\n",
     "        df_copy[col] = df_copy[col].dt.strftime('%Y-%m-%d')\n",
     "    \n",
+    "    # Handle NaN values and convert all columns to string\n",
+    "    for col in df_copy.columns:\n",
+    "        # Convert NaN/None to empty string\n",
+    "        df_copy[col] = df_copy[col].fillna('')\n",
+    "        # Convert all values to string\n",
+    "        df_copy[col] = df_copy[col].astype(str)\n",
+    "        # Replace 'nan' strings with empty string\n",
+    "        df_copy[col] = df_copy[col].replace('nan', '')\n",
+    "    \n",
     "    return df_copy\n",
     "\n",
     "def upload_df_to_gsheet(df: pd.DataFrame, spreadsheet_id: str, \n",
     "                       sheet_name: str, credentials_file: str) -> bool:\n",
     "    \"\"\"Upload DataFrame to Google Sheets\"\"\"\n",
     "    try:\n",
+    "        # Prepare data for upload\n",
     "        df_to_upload = prepare_df_for_upload(df)\n",
     "        \n",
     "        credentials = service_account.Credentials.from_service_account_file(\n",
@@ -214,8 +224,11 @@
     "        \n",
     "        service = build('sheets', 'v4', credentials=credentials)\n",
     "        \n",
+    "        # Convert DataFrame to list of lists for upload\n",
     "        values = [df_to_upload.columns.tolist()]\n",
-    "        values.extend(df_to_upload.values.tolist())\n",
+    "        # Convert all values to strings and replace any remaining NaN\n",
+    "        values.extend([[str(cell) if cell is not None and cell == cell else '' \n",
+    "                       for cell in row] for row in df_to_upload.values.tolist()])\n",
     "        \n",
     "        # Clear existing content\n",
     "        service.spreadsheets().values().clear(\n",
@@ -237,6 +250,8 @@
     "    except Exception as e:\n",
     "        print(f\"Failed to upload to {sheet_name}: {str(e)}\")\n",
     "        return False\n",
+    "\n",
+    "\n",
     "\n",
     "def process_sheets_data(stock_inflow_df: pd.DataFrame, \n",
     "                       release_df: pd.DataFrame) -> Tuple[pd.DataFrame, pd.DataFrame, \n",
