--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -72,10 +72,15 @@
     "    try:\n",
     "        df_clean = df.copy()\n",
     "        \n",
+    "        # Standardize column names\n",
     "        df_clean.columns = (df_clean.columns.str.lower()\n",
     "                          .str.strip()\n",
     "                          .str.replace(' ', '_')\n",
     "                          .str.replace('-', '_'))\n",
+    "        \n",
+    "        # Handle the weight_in_kg to weight rename\n",
+    "        if 'weight_in_kg' in df_clean.columns:\n",
+    "            df_clean = df_clean.rename(columns={'weight_in_kg': 'weight'})\n",
     "        \n",
     "        for column in df_clean.columns:\n",
     "            df_clean[column] = df_clean[column].astype(str).str.strip().str.lower()\n",
